environments/staging/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openedx
  namespace: gca-staging
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - "staging.global-communications-academy.com"
    - "*.staging.global-communications-academy.com"
    secretName: wild-openedx-staging-tls
  rules:
  - host: staging.global-communications-academy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lms
            port:
              number: 8000
  - host: studio.staging.global-communications-academy.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cms
            port:
              number: 8000
  - host: discovery.staging.global-communications-academy.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: discovery
              port:
                number: 8000
